Fix : layout bug for tablet screen

--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -5,6 +5,10 @@
     padding-left: 20px;
     padding-top: 40px;
 
+    @include mq($until: 1240px, $and: false, $from: lg) {
+        max-width: 98vw;
+    }
+
     @include mq($from: 1360px) {
         padding-top: 80px;
         padding-left: 120px;
@@ -33,6 +37,10 @@
             @include mq($from: lg) {
                 max-width: 130px;
                 top: -40px;
+            }
+
+            @include mq($until: 1240px, $and: false, $from: lg) {
+                top: -120px;
             }
         }
     }
@@ -64,6 +72,10 @@
             text-align: right;
         }
 
+        @include mq($until: 1240px, $and: false, $from: lg) {
+            margin-right: 80px;
+        }
+
         h2 {
             font-size: 84px;
             font-weight: 900;
@@ -88,7 +100,6 @@
                 top: 10px;
                 max-width: 400px;
                 right: 30%;
-                left: unset;
             }
         }
 
